# AI-Maintainer-Copilot

./: .dockerignore  .gitignore  ARCH.md  DECISIONS.md  EVALS.md  README.md  RUNBOOK.md  SECURITY.md  alembic.ini  conftest.py  create_admin_user.py  deliverables.md  docker-compose.yml  eval_thresholds.yaml  package-lock.json  pyproject.toml  rag-works.md
.github/workflows/: eval.yml
app/: depends.py  main.py
app/api/: __init__.py  auth.py  chat.py  memory.py  middleware.py  widget.py  widget_admin.py
app/db/: __init__.py  models.py  pool.py  session.py
app/domain/: exceptions.py  models.py  schemas.py
app/infra/: __init__.py  blob.py  db.py  error_handlers.py  llm.py  middleware.py  model_server.py  redaction.py  redis.py  tracing.py  vault.py
app/infra/tests/: test_redaction.py
app/repositories/: audit_log.py  conversation_history.py  memories.py  widget_configs.py
app/services/: auth.py  chatbot.py  memory.py  widget.py
demo/host/: Dockerfile  index.html  nginx.conf
docker/: api.Dockerfile  migrate.Dockerfile  model_server.Dockerfile  streamlit.Dockerfile  widget-nginx.conf  widget.Dockerfile
docs/: model_card.md
docs/rag_docs/: terraform_basics.md
evals/: diff.py  ingest_fixtures.py  run_all.py
evals/classification/: golden_set.csv  run.py  three_way_results.json  three_way_run.py
evals/fixtures/: chunks.jsonl  classification_test.csv  golden.jsonl
evals/rag/: generation.py  golden.jsonl  human_labels.jsonl  judge.py  run.py  run_naive.py  validate_golden.py
migrations/: env.py
migrations/versions/: 001_create_users_and_audit.py  002_add_chunks_table.py  003_add_memories_table.py  004_memories_unique_summary.py  005_widget_configs.py  006_widget_description.py
model_server/: balance_data.py  baseline_llm.py  baseline_ml.py  check_data_completeness.py  data.py  evaluate.py  find_chunks.py  list_docs.py  main.py  ner.py  rag_ingest.py  rag_retrieval.py  search_chunks.py  splits.py  summarizer.py  train_classifier.py
notebooks/: README.md  _build_notebook.py  train_classifier.ipynb
prompts/: __init__.py  _registry.py  system.md
scripts/: create_admin_user.py  main.py  seed_vault.sh  upload_model_artifacts.py
streamlit_app/: Home.py  _auth.py
streamlit_app/pages/: 1_Chat.py  2_Memory_Inspector.py  3_Admin_Widgets.py
tests/integration/: test_services_up.py
tests/smoke/: test_app_wiring.py  test_docs_and_compose.py  test_prompts.py
tests/unit/: test_eval_datasets.py  test_eval_diff.py  test_judge.py  test_tool_registry.py
tools/: __init__.py  registry.py
widget/: index.html  package-lock.json  package.json  postcss.config.js  vite.config.js
widget/public/: loader.js
widget/src/: widget.css  widget.jsx
