[project]
name = "ai-maintainer-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.0",
    "python-dotenv>=1.2.2",
    "structlog>=25.5.0",
]

[dependency-groups]
api = [
    "alembic>=1.13",
    "asyncpg>=0.31.0",
    "fastapi>=0.115.0",
    "fastapi-users[redis,sqlalchemy]>=14.0",
    "groq>=1.2.0",
    "httpx>=0.28.1",
    "hvac>=2.4.0",
    "langfuse>=4.6.1",
    "minio>=7.2.20",
    "prometheus-client>=0.25.0",
    "python-jose[cryptography]>=3.5.0",
    "redis[hiredis]>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.47.0",
]
dev = [
    "docker>=7.1.0",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]
evals = [
    "datasets>=4.8.5",
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "ragas>=0.4.3",
    "requests>=2.34.2",
]
model-server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]",
    "transformers[torch]",
    "datasets",
    "scikit-learn",
    "spacy<3.8",
    "huggingface-hub",
    "minio",
    "numpy==1.26.4",          # ← PINNED
]
streamlit = [
    "fastapi-users[sqlalchemy]>=15.0.5",
    "httpx>=0.28.1",
    "streamlit>=1.31",
]


# ── CPU-only PyTorch wheel index ──
[[tool.uv.index]]
name = "pytorch-cpu"
url  = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch       = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
